CREATE TABLE [dbo].[ExperienceLevel]
(
  [Id] INT NOT NULL PRIMARY KEY DEFAULT NEWID(),
  [Description] VARCHAR(100) NOT NULL
);
